--- a/app/src/main/res/layout/activity_avatar_description.xml
+++ b/app/src/main/res/layout/activity_avatar_description.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AvatarDescriptionActivity"
-    android:background="#93C2FD">
+    android:background="@color/backgroundAvatar">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,6 +21,14 @@
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/avatar_name" />
 
+        <ImageView
+            android:id="@+id/eye_avatar"
+            style="@style/green_eye"
+            android:layout_margin="24dp"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
+
         <TextView
             style="@style/text_view_movie_description"
             android:id="@+id/textView"
@@ -30,6 +38,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <CheckBox
+            android:id="@+id/avatar_cb"
             style="@style/check_box_style"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,17 +46,24 @@
 
 
         <TextView
+            android:id="@+id/textView2"
             style="@style/text_view_movie_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             android:text="@string/avatar_description"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:paddingEnd="12dp"
-            android:paddingStart="12dp"
             tools:ignore="RtlSymmetry" />
+
+        <ImageView
+            style="@style/share_view"
+            android:id="@+id/shareAvatar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
 
