--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,180 +15,189 @@
 
         <ImageView
             style="@style/poster"
-            android:id="@+id/imageView1"
+            android:id="@+id/poster_avatar"
             android:src="@mipmap/avatar_foreground"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
+            app:layout_constraintEnd_toStartOf="@+id/poster_baby_driver"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
 
+        <TextView
+            android:id="@+id/textAvatarMain"
+            style="@style/text_main_activity"
+            android:text="@string/avatar_name"
+            app:layout_constraintEnd_toEndOf="@+id/poster_avatar"
+            app:layout_constraintStart_toStartOf="@+id/poster_avatar"
+            app:layout_constraintTop_toBottomOf="@+id/poster_avatar" />
+
+        <Button
+            android:id="@+id/buttonAvatarPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_avatar"
+            app:layout_constraintEnd_toEndOf="@+id/poster_avatar"
+            app:layout_constraintStart_toStartOf="@+id/poster_avatar" />
+
         <ImageView
             style="@style/green_eye"
-            android:id="@+id/eye1"
+            android:id="@+id/eye_avatar"
             android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView1"
-            app:layout_constraintTop_toTopOf="@+id/imageView1" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_avatar"
+            app:layout_constraintTop_toTopOf="@+id/poster_avatar" />
 
         <ImageView
             style="@style/poster"
-            android:id="@+id/imageView2"
+            android:id="@+id/poster_baby_driver"
             android:src="@mipmap/baby_driver_foreground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/imageView1"
+            app:layout_constraintStart_toEndOf="@+id/poster_avatar"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            style="@style/green_eye"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        <TextView
+            android:id="@+id/textBabyDriverMain"
+            style="@style/text_main_activity"
+            android:text="@string/baby_driver"
+            app:layout_constraintEnd_toEndOf="@+id/poster_baby_driver"
+            app:layout_constraintStart_toStartOf="@+id/poster_baby_driver"
+            app:layout_constraintTop_toBottomOf="@+id/poster_baby_driver" />
+
+        <Button
+            android:id="@+id/buttonBabyDriverPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_baby_driver"
+            app:layout_constraintEnd_toEndOf="@+id/poster_baby_driver"
+            app:layout_constraintStart_toStartOf="@+id/poster_baby_driver" />
+
 
         <ImageView
+            style="@style/green_eye"
+            android:id="@+id/eye_baby_driver"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintEnd_toEndOf="@+id/poster_baby_driver"
+            app:layout_constraintTop_toTopOf="@+id/poster_baby_driver" />
+
+        <ImageView
+            android:id="@+id/poster_matrix"
             style="@style/poster"
-            android:id="@+id/imageView3"
             android:src="@mipmap/matrix_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView1"
-            app:layout_constraintStart_toStartOf="@+id/imageView1"
-            app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_avatar"
+            app:layout_constraintStart_toStartOf="@+id/poster_avatar"
+            app:layout_constraintTop_toBottomOf="@+id/textAvatarMain" />
+
+        <TextView
+            android:id="@+id/textMatrixMain"
+            style="@style/text_main_activity"
+            android:text="@string/matrix"
+            app:layout_constraintEnd_toEndOf="@+id/poster_matrix"
+            app:layout_constraintStart_toStartOf="@+id/poster_matrix"
+            app:layout_constraintTop_toBottomOf="@+id/poster_matrix" />
+
+        <Button
+            android:id="@+id/buttonMatrixPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_matrix"
+            app:layout_constraintEnd_toEndOf="@+id/poster_matrix"
+            app:layout_constraintStart_toStartOf="@+id/poster_matrix" />
 
         <ImageView
             style="@style/green_eye"
+            android:id="@+id/eye_matrix"
             android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_matrix"
+            app:layout_constraintTop_toTopOf="@+id/poster_matrix" />
 
         <ImageView
+            android:id="@+id/poster_main_hero"
             style="@style/poster"
-            android:id="@+id/imageView4"
             android:src="@mipmap/main_hero_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintStart_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_baby_driver"
+            app:layout_constraintStart_toStartOf="@+id/poster_baby_driver"
+            app:layout_constraintTop_toBottomOf="@+id/textBabyDriverMain" />
+
+        <TextView
+            android:id="@+id/textMainHeroMain"
+            style="@style/text_main_activity"
+            android:text="@string/main_hero"
+            app:layout_constraintEnd_toEndOf="@+id/poster_main_hero"
+            app:layout_constraintStart_toStartOf="@+id/poster_main_hero"
+            app:layout_constraintTop_toBottomOf="@+id/poster_main_hero" />
+
+        <Button
+            android:id="@+id/buttonMainHeroPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_main_hero"
+            app:layout_constraintEnd_toEndOf="@+id/poster_main_hero"
+            app:layout_constraintStart_toStartOf="@+id/poster_main_hero" />
 
         <ImageView
             style="@style/green_eye"
+            android:id="@+id/eye_main_hero"
             android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="@+id/imageView4" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_main_hero"
+            app:layout_constraintTop_toTopOf="@+id/poster_main_hero" />
 
         <ImageView
             style="@style/poster"
-            android:id="@+id/imageView5"
+            android:id="@+id/poster_world_heart"
             android:src="@mipmap/world_heart_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_matrix"
+            app:layout_constraintStart_toStartOf="@+id/poster_matrix"
+            app:layout_constraintTop_toBottomOf="@+id/textMatrixMain" />
+
+        <TextView
+            android:id="@+id/textWorldHeartMain"
+            style="@style/text_main_activity"
+            android:text="@string/world_heart"
+            app:layout_constraintEnd_toEndOf="@+id/poster_world_heart"
+            app:layout_constraintStart_toStartOf="@+id/poster_world_heart"
+            app:layout_constraintTop_toBottomOf="@+id/poster_world_heart" />
+
+        <Button
+            android:id="@+id/buttonWorldHeartPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_world_heart"
+            app:layout_constraintEnd_toEndOf="@+id/poster_world_heart"
+            app:layout_constraintStart_toStartOf="@+id/poster_world_heart" />
 
         <ImageView
             style="@style/green_eye"
+            android:id="@+id/eye_world_heart"
             android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_world_heart"
+            app:layout_constraintTop_toTopOf="@+id/poster_world_heart" />
 
         <ImageView
             style="@style/poster"
-            android:id="@+id/imageView6"
+            android:id="@+id/poster_deadpool"
             android:src="@mipmap/deadpool_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView4"
-            app:layout_constraintStart_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_main_hero"
+            app:layout_constraintStart_toStartOf="@+id/poster_main_hero"
+            app:layout_constraintTop_toBottomOf="@+id/textMainHeroMain" />
+
+        <TextView
+            android:id="@+id/textDeadpoolMain"
+            style="@style/text_main_activity"
+            android:text="@string/deadpool"
+            app:layout_constraintEnd_toEndOf="@+id/poster_deadpool"
+            app:layout_constraintStart_toStartOf="@+id/poster_deadpool"
+            app:layout_constraintTop_toBottomOf="@+id/poster_deadpool" />
+
+        <Button
+            android:id="@+id/buttonDeadpoolPoster"
+            style="@style/button_main_activity"
+            app:layout_constraintBottom_toBottomOf="@+id/poster_deadpool"
+            app:layout_constraintEnd_toEndOf="@+id/poster_deadpool"
+            app:layout_constraintStart_toStartOf="@+id/poster_deadpool" />
 
         <ImageView
             style="@style/green_eye"
+            android:id="@+id/eye_deadpool"
             android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView6"
-            app:layout_constraintTop_toTopOf="@+id/imageView6" />
+            app:layout_constraintEnd_toEndOf="@+id/poster_deadpool"
+            app:layout_constraintTop_toTopOf="@+id/poster_deadpool" />
 
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView7"
-            android:src="@mipmap/avatar_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView5"
-            app:layout_constraintStart_toStartOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:id="@+id/eye7"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView7"
-            app:layout_constraintTop_toTopOf="@+id/imageView7" />
-
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView8"
-            android:src="@mipmap/baby_driver_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView6"
-            app:layout_constraintStart_toStartOf="@+id/imageView6"
-            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:id="@+id/eye8"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView8"
-            app:layout_constraintTop_toTopOf="@+id/imageView8" />
-
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView9"
-            android:src="@mipmap/matrix_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView12"
-            app:layout_constraintStart_toStartOf="@+id/imageView12"
-            app:layout_constraintTop_toBottomOf="@+id/imageView12" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView9"
-            app:layout_constraintTop_toTopOf="@+id/imageView9" />
-
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView10"
-            android:src="@mipmap/main_hero_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView11"
-            app:layout_constraintStart_toStartOf="@+id/imageView11"
-            app:layout_constraintTop_toBottomOf="@+id/imageView11" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView10"
-            app:layout_constraintTop_toTopOf="@+id/imageView10" />
-
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView11"
-            android:src="@mipmap/world_heart_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView8"
-            app:layout_constraintStart_toStartOf="@+id/imageView8"
-            app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView11"
-            app:layout_constraintTop_toTopOf="@+id/imageView11" />
-
-        <ImageView
-            style="@style/poster"
-            android:id="@+id/imageView12"
-            android:src="@mipmap/deadpool_foreground"
-            app:layout_constraintEnd_toEndOf="@+id/imageView7"
-            app:layout_constraintStart_toStartOf="@+id/imageView7"
-            app:layout_constraintTop_toBottomOf="@+id/imageView7" />
-
-        <ImageView
-            style="@style/green_eye"
-            android:src="@drawable/ic_baseline_remove_red_eye_24"
-            app:layout_constraintEnd_toEndOf="@+id/imageView12"
-            app:layout_constraintTop_toTopOf="@+id/imageView12"/>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </ScrollView>
