--- a/app/src/main/res/layout/activity_main_hero.xml
+++ b/app/src/main/res/layout/activity_main_hero.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainHeroActivity"
-    android:background="#E8C3C3">
+    android:background="@color/backgroundMainHero">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,11 +16,19 @@
         <ImageView
             style="@style/image_movie_description"
             android:id="@+id/imageView"
-            android:src="@mipmap/deadpool"
+            android:src="@mipmap/main_hero"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/main_hero" />
+
+        <ImageView
+            android:id="@+id/eye_main_hero"
+            style="@style/green_eye"
+            android:layout_margin="24dp"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
 
         <TextView
             style="@style/text_view_movie_description"
@@ -31,6 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <CheckBox
+            android:id="@+id/main_hero_cb"
             style="@style/check_box_style"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +47,7 @@
 
 
         <TextView
+            android:id="@+id/text_view"
             style="@style/text_view_movie_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,6 +59,13 @@
             android:paddingEnd="12dp"
             android:paddingStart="12dp"
             tools:ignore="RtlSymmetry" />
+
+        <ImageView
+            style="@style/share_view"
+            android:id="@+id/shareMainHero"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
