--- a/app/src/main/res/layout/activity_world_heart.xml
+++ b/app/src/main/res/layout/activity_world_heart.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WorldHeartActivity">
+    tools:context=".WorldHeartActivity"
+    android:background="@color/backgroundWorldHeart">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,21 +22,32 @@
             android:contentDescription="@string/world_heart" />
 
         <TextView
-            style="@style/text_view_movie_description"
             android:id="@+id/textView"
+            style="@style/text_view_movie_description"
             android:text="@string/world_heart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+        <ImageView
+            android:id="@+id/eye_world_heart"
+            style="@style/green_eye"
+            android:layout_margin="24dp"
+            android:src="@drawable/ic_baseline_remove_red_eye_24"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
+
         <CheckBox
+            android:id="@+id/world_heart_cb"
             style="@style/check_box_style"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
         <TextView
+            android:id="@+id/text_view"
             style="@style/text_view_movie_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,6 +59,13 @@
             android:paddingEnd="12dp"
             android:paddingStart="12dp"
             tools:ignore="RtlSymmetry" />
+
+        <ImageView
+            style="@style/share_view"
+            android:id="@+id/shareWorldHeart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_view"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
